--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
-    <title>Intro to MapView - Create a 2D map - 4.15</title>
+    <title>Taipei Incidents</title>
     <style>
       html,
       body,
